--- a/Server/package.json
+++ b/Server/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart":"nodemon app.js"
+    "devStart": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.2"
+    "mongoose": "^6.9.2",
+    "multer": "^1.4.5-lts.1",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
