--- a/Server/package.json
+++ b/Server/package.json
@@ -2,20 +2,23 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
+  "type": "module",
   "scripts": {
-    "devStart": "nodemon app.js"
+    "start": "nodemon app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.2",
+    "mongoose": "^6.10.0",
     "multer": "^1.4.5-lts.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "nodemon": "^2.0.20"
   }
 }
