--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@typegoose/typegoose": "^10.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.10.0",
