--- a/Server/package.json
+++ b/Server/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^8.6.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.10.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
